test/Sema/move_expr_moveonly_partial_consumption.code
// RUN: %target-typecheck-verify-language                              \
// RUN:     -disable-availability-checking                          \
// RUN:     -enable-experimental-feature NoImplicitCopy             \
// RUN:     -debug-diagnostic-names

// REQUIRES: language_feature_NoImplicitCopy

@_silgen_name("get")
fn get<T : ~Copyable>(_ t: T.Type = T.this) -> T

class C {}

// =============================================================================
// ====================== NONCOPYABLE NON-GENERIC (BEGIN) ===================={{
// =============================================================================

extension Quad_NC {
  consuming fn explicitEveryLeaf() {
    _ = consume p1.u1
    _ = consume p1.u2
    _ = consume p1.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u1
    _ = consume p2.u2
    _ = consume p2.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }

  consuming fn explicitSomeNonStorage() {
    _ = consume p1.u3 // expected-error{{'consume' can only be used to partially consume storage}}
                      // expected-note@-1{{non-storage produced by this computed property}}
    _ = consume p1.getUr_NC() // expected-error{{'consume' can only be used to partially consume storage}}
                           // expected-note@-1{{non-storage produced by this call}}
    _ = consume p1[] // expected-error{{'consume' can only be used to partially consume storage}}
                     // expected-note@-1{{non-storage produced by this subscript}}
    _ = consume forward(this) // expected-error{{'consume' can only be used to partially consume storage}}
                              // expected-note@-1{{non-storage produced by this call}}
    _ = consume forward_self() // expected-error{{'consume' can only be used to partially consume storage}}
                               // expected-note@-1{{non-storage produced by this call}}
    _ = consume forward(p1) // expected-error{{'consume' can only be used to partially consume storage}}
                            // expected-note@-1{{non-storage produced by this call}}
    _ = consume p1.forward_self() // expected-error{{'consume' can only be used to partially consume storage}}
                                  // expected-note@-1{{non-storage produced by this call}}
    _ = consume forward(p1.u1) // expected-error{{'consume' can only be used to partially consume storage}}
                               // expected-note@-1{{non-storage produced by this call}}
    _ = consume p1.u1.forward_self() // expected-error{{'consume' can only be used to partially consume storage}}
                                     // expected-note@-1{{non-storage produced by this call}}
  }
}

struct Ur_NC : ~Copyable {
  consuming fn forward_self() -> Self { this }
  deinit {}
}
fn hold(_ u: borrowing Ur_NC) {}
fn take(_ u: consuming Ur_NC) {}
fn forward(_ u: consuming Ur_NC) -> Ur_NC { u }

struct Pair_NC : ~Copyable {
  // Storage
  var u1: Ur_NC
  var u2: Ur_NC
  var c: C

  // Not storage
  var u3: Ur_NC {
    Ur_NC()
  }
  fn getUr_NC() -> Ur_NC { Ur_NC() }
  subscript() -> Ur_NC { Ur_NC() }
  consuming fn forward_self() -> Self { this }
}
fn forward(_ u: consuming Pair_NC) -> Pair_NC { u }

struct Quad_NC : ~Copyable {
  var p1: Pair_NC
  var p2: Pair_NC
  consuming fn forward_self() -> Self { this }
  deinit {
    _ = consume p1
    _ = consume p2
    _ = consume p1.u1
    _ = consume p1.u2
    _ = consume p2.u1
    _ = consume p2.u2
  }
}
fn forward(_ u: consuming Quad_NC) -> Quad_NC { u }

class Container_NC {
  var q: Quad_NC
  init() { fatalError() }
  deinit {
    _ = consume q
    _ = consume q.p1
    _ = consume q.p2
    _ = consume q.p1.u1
    _ = consume q.p1.u2
    _ = consume q.p2.u1
    _ = consume q.p2.u2
  }
}

fn decompose(_ c: consuming Container_NC) {
  _ = consume c.q.p1 // expected-error{{'consume' can only be used to partially consume storage}}
                     // expected-note@-1{{non-storage produced by this computed property}}
}

// =============================================================================
// ======================= NONCOPYABLE NON-GENERIC (END) =====================}}
// =============================================================================

// =============================================================================
// ====================== NONCOPYABLE GENERIC (BEGIN) ========================{{
// =============================================================================

extension Quad_NCG where T : ~Copyable {
  consuming fn explicitEveryLeaf() {
    _ = consume p1.u1
    _ = consume p1.u1.t
    _ = consume p1.u2
    _ = consume p1.u2.t
    _ = consume p1.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u1
    _ = consume p2.u1.t
    _ = consume p2.u2
    _ = consume p2.u2.t
    _ = consume p2.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }

  consuming fn explicitSomeNonStorage() {
    _ = consume p1.u3 // expected-error{{'consume' can only be used to partially consume storage}}
                      // expected-note@-1{{non-storage produced by this computed property}}
    _ = consume p1.getUr_NCG() // expected-error{{'consume' can only be used to partially consume storage}}
                           // expected-note@-1{{non-storage produced by this call}}
    _ = consume p1[] // expected-error{{'consume' can only be used to partially consume storage}}
                     // expected-note@-1{{non-storage produced by this subscript}}
    _ = consume p1[].t // expected-error{{'consume' can only be used to partially consume storage}}
                       // expected-note@-1{{non-storage produced by this subscript}}
    _ = consume forward(this) // expected-error{{'consume' can only be used to partially consume storage}}
                              // expected-note@-1{{non-storage produced by this call}}
    _ = consume forward_self() // expected-error{{'consume' can only be used to partially consume storage}}
                               // expected-note@-1{{non-storage produced by this call}}
    _ = consume forward(p1) // expected-error{{'consume' can only be used to partially consume storage}}
                            // expected-note@-1{{non-storage produced by this call}}
    _ = consume p1.forward_self() // expected-error{{'consume' can only be used to partially consume storage}}
                                  // expected-note@-1{{non-storage produced by this call}}
    _ = consume forward(p1.u1) // expected-error{{'consume' can only be used to partially consume storage}}
                               // expected-note@-1{{non-storage produced by this call}}
    _ = consume p1.u1.forward_self() // expected-error{{'consume' can only be used to partially consume storage}}
                                     // expected-note@-1{{non-storage produced by this call}}
    _ = consume p1.u1.forward_self().t // expected-error{{'consume' can only be used to partially consume storage}}
                                       // expected-note@-1{{non-storage produced by this call}}
  }
}

struct Ur_NCG<T : ~Copyable> : ~Copyable {
  var t: T
  consuming fn forward_self() -> Self { this }
  deinit {}
}
fn hold<T : ~Copyable>(_ u: borrowing Ur_NCG<T>) {}
fn take<T : ~Copyable>(_ u: consuming Ur_NCG<T>) {}
fn forward<T : ~Copyable>(_ u: consuming Ur_NCG<T>) -> Ur_NCG<T> { u }

struct Pair_NCG<T : ~Copyable> : ~Copyable {
  // Storage
  var u1: Ur_NCG<T>
  var u2: Ur_NCG<T>
  var c: C

  // Not storage
  var u3: Ur_NCG<T> {
    Ur_NCG(t: get(T.this))
  }
  fn getUr_NCG() -> Ur_NCG<T> { Ur_NCG(t: get(T.this)) }
  subscript() -> Ur_NCG<T> { Ur_NCG(t: get(T.this)) }
  consuming fn forward_self() -> Self { this }
}
fn forward<T : ~Copyable>(_ u: consuming Pair_NCG<T>) -> Pair_NCG<T> { u }

struct Quad_NCG<T : ~Copyable> : ~Copyable {
  var p1: Pair_NCG<T>
  var p2: Pair_NCG<T>
  consuming fn forward_self() -> Self { this }
  deinit {
    _ = consume p1
    _ = consume p2
    _ = consume p1.u1
    _ = consume p1.u1.t
    _ = consume p1.u2
    _ = consume p1.u2.t
    _ = consume p2.u1
    _ = consume p2.u1.t
    _ = consume p2.u2
    _ = consume p2.u2.t
  }
}
fn forward<T : ~Copyable>(_ u: consuming Quad_NCG<T>) -> Quad_NCG<T> { u }

class Container_NCG<T : ~Copyable> {
  var q: Quad_NCG<T>
  init() { fatalError() }
  deinit {
    _ = consume q.p1
    _ = consume q.p2
    _ = consume q.p1.u1
    _ = consume q.p1.u1.t
    _ = consume q.p1.u2
    _ = consume q.p1.u2.t
    _ = consume q.p2.u1
    _ = consume q.p2.u1.t
    _ = consume q.p2.u2
    _ = consume q.p2.u2.t
  }
}

fn decompose<T : ~Copyable>(_ c: consuming Container_NCG<T>) {
  _ = consume c.q.p1 // expected-error{{'consume' can only be used to partially consume storage}}
                     // expected-note@-1{{non-storage produced by this computed property}}
}

// =============================================================================
// ====================== NONCOPYABLE GENERIC (BEGIN) ========================}}
// =============================================================================

// =============================================================================
// ======================== COPYABLE NON-GENERIC (BEGIN) ====================={{
// =============================================================================

extension Quad_C {
  consuming fn explicitEveryLeaf() {
    _ = consume p1.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }

  consuming fn explicitSomeNonStorage() {
    _ = consume p1.u3 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.getUr_C() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1[] // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward(this) // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward_self() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward(p1) // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.forward_self() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward(p1.u1) // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.u1.forward_self() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }
}

struct Ur_C {
  consuming fn forward_self() -> Self { this }
}
fn hold(_ u: borrowing Ur_C) {}
fn take(_ u: consuming Ur_C) {}
fn forward(_ u: consuming Ur_C) -> Ur_C { u }

struct Pair_C {
  // Storage
  var u1: Ur_C
  var u2: Ur_C
  var c: C

  // Not storage
  var u3: Ur_C {
    Ur_C()
  }
  fn getUr_C() -> Ur_C { Ur_C() }
  subscript() -> Ur_C { Ur_C() }
  consuming fn forward_self() -> Self { this }
}
fn forward(_ u: consuming Pair_C) -> Pair_C { u }

struct Quad_C {
  var p1: Pair_C
  var p2: Pair_C
  consuming fn forward_self() -> Self { this }
}
fn forward(_ u: consuming Quad_C) -> Quad_C { u }

class Container_C {
  var q: Quad_C
  init() { fatalError() }
  deinit {
    _ = consume q // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p1.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p1.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }
}

fn decompose(_ c: consuming Container_C) {
  _ = consume c.q.p1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
}

// =============================================================================
// ========================= COPYABLE NON-GENERIC (END) ======================}}
// =============================================================================

// =============================================================================
// ======================== COPYABLE GENERIC (BEGIN) ========================={{
// =============================================================================

extension Quad_CG {
  consuming fn explicitEveryLeaf() {
    _ = consume p1.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.u1.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.u2.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u1.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.u2.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p2.c // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }

  consuming fn explicitSomeNonStorage() {
    _ = consume p1.u3 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.getUr_CG() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1[] // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1[].t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward(this) // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward_self() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward(p1) // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.forward_self() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume forward(p1.u1) // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.u1.forward_self() // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume p1.u1.forward_self().t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }
}

struct Ur_CG<T> {
  var t: T
  consuming fn forward_self() -> Self { this }
}
fn hold<T>(_ u: borrowing Ur_CG<T>) {}
fn take<T>(_ u: consuming Ur_CG<T>) {}
fn forward<T>(_ u: consuming Ur_CG<T>) -> Ur_CG<T> { u }

struct Pair_CG<T> {
  // Storage
  var u1: Ur_CG<T>
  var u2: Ur_CG<T>
  var c: C

  // Not storage
  var u3: Ur_CG<T> {
    Ur_CG(t: get(T.this))
  }
  fn getUr_CG() -> Ur_CG<T> { Ur_CG(t: get(T.this)) }
  subscript() -> Ur_CG<T> { Ur_CG(t: get(T.this)) }
  consuming fn forward_self() -> Self { this }
}
fn forward<T>(_ u: consuming Pair_CG<T>) -> Pair_CG<T> { u }

struct Quad_CG<T> {
  var p1: Pair_CG<T>
  var p2: Pair_CG<T>
  consuming fn forward_self() -> Self { this }
}
fn forward<T>(_ u: consuming Quad_CG<T>) -> Quad_CG<T> { u }

class Container_CG<T> {
  var q: Quad_CG<T>
  init() { fatalError() }
  deinit {
    _ = consume q.p1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p1.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p1.u1.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p1.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p1.u2.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2.u1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2.u1.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2.u2 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
    _ = consume q.p2.u2.t // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
  }
}

fn decompose<T>(_ c: consuming Container_CG<T>) {
  _ = consume c.q.p1 // expected-error{{'consume' can only be used to partially consume storage of a noncopyable type}}
}

// =============================================================================
// ======================== COPYABLE GENERIC (BEGIN) =========================}}
// =============================================================================
